--- a/src/components/SearchForm/Form.module.css
+++ b/src/components/SearchForm/Form.module.css
@@ -13,10 +13,8 @@
 
 .search_form {
     margin-top: 200px;
-    height: 120px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
 }
 
@@ -28,4 +26,17 @@
 .search_form button {
     width: 20vw;
     height: 40px;
+    margin-top: 10px;
+}
+
+.route {
+    width: 50vw;
+    padding: 10px;
+    margin-top: 5px;
+    box-shadow: 0 0 3px grey;
+    background: white;
+}
+
+.route:hover {
+    cursor: pointer;
 }
