--- a/src/components/SearchForm/Form.module.css
+++ b/src/components/SearchForm/Form.module.css
@@ -8,11 +8,12 @@
     height: 100vh;
     width: 100vw;
     background: black;
-    opacity: .7;
+    opacity: .85;
 }
 
 .search_form {
-    margin-top: 200px;
+    width: 50vw;
+    margin: 200px auto 0;
     display: flex;
     flex-direction: column;
     align-items: center;
