--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -12,7 +12,7 @@
     font-weight: normal;
 }
 
-.routeWithStop:hover {
+.routeWithStop span:hover {
     text-decoration: underline;
     cursor: pointer;
 }
