Connect following libraries: redux, react-redux, redux-thunk. Also add TS. Started refactoring code for best optimization and readability. Create store and serverData reducer.

--- a/src/components/map/Map.module.css
+++ b/src/components/map/Map.module.css
@@ -31,12 +31,12 @@
     justify-content: center;
 }
 
-.show_routes {
+.show_routes, .build_route {
     font-size: 12px;
     color: darkblue;
 }
 
-.show_routes:hover {
+.show_routes:hover, .build_route:hover {
     text-decoration: underline;
     cursor: pointer;
 }
