--- a/src/components/map/Map.module.css
+++ b/src/components/map/Map.module.css
@@ -31,14 +31,22 @@
     justify-content: center;
 }
 
-.show_routes, .build_route {
+.show_routes, .build_route, .drop_route {
     font-size: 12px;
     color: darkblue;
 }
 
-.show_routes:hover, .build_route:hover {
+.show_routes:hover, .build_route:hover, .drop_route:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+
+.drop_route {
+    margin-left: 5px;
+}
+
+.drop_route > img {
+    width: 10px;
 }
 
 .show_times {
